--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         Hi 👋<br>
         I'm Ukaza Perdana, a programmer based in Indonesia.<br>
         I enjoy laying foundations on which other developers build.<br>
-        I'm all for strong and convenience and automations!
+        I'm all for laziness and convenience and automations!
       </div>
     </div>
 
