--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       color: black;
     }
 
-    @media (min-width: 768px) {
-      .superbox {
-        width: 20%;
-        margin: 0 auto;
-      }
+    p { margin: 0px }
+
+    .superbox {
+      margin: 0 auto;
     }
 
     .boxybox {
@@ -80,8 +79,17 @@
     }
 
     pre {
-
       line-height: normal;
+    }
+
+    @media (min-width: 800px) {
+      .superbox {
+        width: 500px;
+      }
+
+      .message {
+        margin: 0px 10px;
+      }
     }
   </style>
 </head>
@@ -93,9 +101,9 @@
         <img class="ikon borderoooo" src="https://avatars.githubusercontent.com/u/6721248?v=4" alt="me face">
       </div>
       <div class="message">
-        Hi 👋
-        I'm Ukaza Perdana, a programmer from Indonesia. I'm a backend-leaning full-stack developer.
-        I'm all for laziness, convenience and automations.
+        <p>Hi 👋 I'm Ukaza Perdana, a programmer from Indonesia.</p>
+        <p>I'm a backend-leaning full-stack developer.</p>
+        <p>I'm all for laziness, convenience and automations.</p>
       </div>
     </div>
 
