--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
         <div class="ikon borderoooo">🍸</div>
       </div>
       <div class="message">
-        <iframe src="https://open.spotify.com/embed/playlist/4RtAxiiNZQyWtv8GVgmRrP" width="100%" height="380"
-          frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/playlist/4DLpsiSnaEQudEHsKZPmLr" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
       </div>
     </div>
   </div>
