--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       }, 1000)
     }
     
-    window.onvisibilitychange = function (event) {
+    document.onvisibilitychange = function (event) {
       if (event.target.visibilityState == 'visible') {
         resetIcon()
       } else {
