--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   "<strong>github</strong>": "<a href="https://github.com/ukazap">ukazap</a>",
   "<strong>linkedin</strong>": "<a href="https://www.linkedin.com/in/ukazap">ukazap</a>",
   "<strong>email</strong>": "<a href="mailto:ukaza@perdana.dev">ukaza@perdana.dev</a>",
-  "<strong>pgp</strong>": "<a href="https://raw.githubusercontent.com/ukazap/ukazap/main/pubkey.txt">C53FB9EFF87DD0ED1676D4D960D653FD6FA2FB3D</a>"
+  "<strong>pgp</strong>": "<a href="https://raw.githubusercontent.com/ukazap/ukazap/main/pubkey.txt">c53f b9ef f87d d0ed 1676 d4d9 60d6 53fd 6fa2 fb3d</a>"
 }</pre>
     </div>
 
