--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
       <div class="ikon-wrapper">
         <div class="ikon borderoooo">📪</div>
       </div>
-      <pre class="message">{
-  "<strong>github</strong>": "<a href="https://github.com/ukazap">ukazap</a>",
-  "<strong>linkedin</strong>": "<a href="https://www.linkedin.com/in/ukazap">ukazap</a>",
-  "<strong>email</strong>": "<a href="mailto:ukaza@perdana.dev">ukaza@perdana.dev</a>",
-  "<strong>pgp</strong>": "<a href="https://raw.githubusercontent.com/ukazap/ukazap/main/pubkey.txt">c53f b9ef f87d d0ed 1676 d4d9 60d6 53fd 6fa2 fb3d</a>"
-}</pre>
+      <div class="message">
+        <p><strong>github</strong>:<a href="https://github.com/ukazap">ukazap</a></p>
+        <p><strong>linkedin</strong>:<a href="https://www.linkedin.com/in/ukazap">ukazap</a></p>
+        <p><strong>email</strong>:<a href="mailto:ukaza@perdana.dev">ukaza@perdana.dev</a></p>
+        <p><strong>pgp</strong>:<a href="https://raw.githubusercontent.com/ukazap/ukazap/main/pubkey.txt">C53F B9EF F87D D0ED 1676 D4D9 60D6 53FD 6FA2 FB3D</a></p>
+      </div>
     </div>
 
     <div class="boxybox borderoo shadowee">
