--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <img class="ikon borderoooo" src="https://avatars.githubusercontent.com/u/6721248?v=4" alt="me face">
       </div>
       <div class="message">
-        <p>Hi 👋 I'm Ukaza Perdana, a programmer from Indonesia.</p>
+        <p><strong>Hi 👋 I'm Ukaza Perdana, a programmer from Indonesia.</strong></p>
         <p>I'm a backend-leaning full-stack developer.</p>
         <p>I'm all for laziness, convenience and automations.</p>
       </div>
