--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p><strong>github</strong>: <a href="https://github.com/ukazap">ukazap</a></p>
         <p><strong>linkedin</strong>: <a href="https://www.linkedin.com/in/ukazap">ukazap</a></p>
         <p><strong>email</strong>: <a href="mailto:ukaza@perdana.dev">ukaza@perdana.dev</a></p>
-        <p><strong>pgp</strong>: <a href="https://raw.githubusercontent.com/ukazap/ukazap/main/pubkey.txt">C53F B9EF F87D D0ED 1676 D4D9 60D6 53FD 6FA2 FB3D</a></p>
+        <p><strong>pgp</strong>: <a href="https://keybase.io/ukazap/pgp_keys.asc">DD484875EB6DC5AF</a></p>
       </div>
     </div>
 
