--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       <div class="message">
         <p><strong>github</strong>: <a href="https://github.com/ukazap">ukazap</a></p>
         <p><strong>linkedin</strong>: <a href="https://www.linkedin.com/in/ukazap">ukazap</a></p>
+        <p><strong>polywork</strong>: <a href="https://log.perdana.dev/">ukazap</a></p>
         <p><strong>email</strong>: <a href="mailto:ukaza@perdana.dev">ukaza@perdana.dev</a></p>
         <p><strong>pgp</strong>: <a href="https://keybase.io/ukazap/pgp_keys.asc">DD484875EB6DC5AF</a></p>
       </div>
